--- a/launchCountdownTimer/index.html
+++ b/launchCountdownTimer/index.html
@@ -13,10 +13,10 @@
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>Frontend Mentor | Launch countdown timer</title>
+    <title>Launch countdown timer</title>
 
     <link rel="stylesheet" href="styles.css" />
   </head>
@@ -24,33 +24,43 @@
   <body>
     <div class="countdown">
       <h1 class="title">WE'RE LAUNCHING SOON</h1>
-      <div class="date-box">
-        <div class="date">
-          <p id="days">08</p>
+      <div class="date-container">
+        <div class="date-box">
+          <div class="date">
+            <p id="days"></p>
+          </div>
+          <div class="date-title">
+            <p>DAYS</p>
+          </div>
         </div>
-        <p class="date-title">DAYS</p>
-      </div>
-      <div class="date-box hour">
-        <div class="date">
-          <p id="hours">23</p>
+        <div class="date-box">
+          <div class="date">
+            <p id="hours"></p>
+          </div>
+          <div class="date-title">
+            <p>HOURS</p>
+          </div>
         </div>
-        <p class="date-title">HOURS</p>
-      </div>
-      <div class="date-box minute">
-        <div class="date">
-          <p id="mins">55</p>
+        <div class="date-box">
+          <div class="date">
+            <p id="mins"></p>
+          </div>
+          <div class="date-title">
+            <p>MINUTES</p>
+          </div>
         </div>
-        <p class="date-title">MINUTES</p>
-      </div>
-      <div class="date-box second">
-        <div class="date">
-          <p id="secs">41</p>
+        <div class="date-box">
+          <div class="date">
+            <p id="secs"></p>
+          </div>
+          <div class="date-title">
+            <p>SECONDS</p>
+          </div>
         </div>
-        <p class="date-title">SECONDS</p>
       </div>
-    </div>
 
-    <img class="hills" src="./images/pattern-hills.svg" alt="hills" />
+      <img class="hills" src="./images/pattern-hills.svg" alt="hills" />
+    </div>
 
     <script src="./index.js" type="text/javascript"></script>
   </body>
